[package]
name = "timeline_rs"
version = "0.1.1"
edition = "2021"
description = "simple timeline library for Rust"
license = "WTFPL"
repository = "https://github.com/funatsufumiya/timeline_rs"

[features]
default = []
bevy = ["dep:bevy"]
bevy_example = ["dep:bevy", "bevy/default", "bevy_egui"]

[dev-dependencies]
log = "0.4"
env_logger = "0.11"
assert_float_eq = "1.1.3"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
quickxml_to_serde = "0.6.0"
minidom = "0.12.0"
anyhow = "1.0.40"

# WORKAROUND: should be [dev-dependencies] but it doesn't work as optional
bevy = { version = "0.13", default-features = false, features = ["bevy_render"], optional = true }
bevy_egui = { version = "0.26", optional = true }

[[example]]
name = "easing_tester"
path = "examples/easing_tester.rs"
required-features = ["bevy_example"]

[[example]]
name = "timeline_simple"
path = "examples/timeline_simple.rs"
required-features = ["bevy_example"]
    
[[example]]
name = "timeline_from_xml"
path = "examples/timeline_from_xml.rs"
required-features = ["bevy_example"]
